--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -34,5 +34,8 @@
     align-items: center;
   }
   label{
-    font-family: sans-serif
+    font-family: sans-serif;
+  }
+  .label{
+    margin-bottom: 5px;
   }
