--- a/src/DetalhesCaixa/roletaStyle.css
+++ b/src/DetalhesCaixa/roletaStyle.css
@@ -3,7 +3,7 @@ body {
   background-color: black;
 }
 
-/* Laufband */
+
 #sombraRoleta {
   display: none;
   position: fixed;
@@ -29,7 +29,7 @@ body {
 
   background-color: lightgray;
 }
-#laufband_zeiger {
+#marcador_roleta {
   position: absolute;
   width: 200px;
   height: 5px;
